deploy/app-multi-tenant.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-endpoint
subsets:
  - addresses:
      - ip: 192.168.2.102
    ports:
      - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-endpoint
spec:
  clusterIP: 10.1.218.157
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multi-tenant-deployment-v1
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        app: multi-tenant
        version: v1
    spec:
      containers:
        - name: multi-tenant
          image: 192.168.2.200:5000/multi-tenant:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multi-tenant-deployment-v2
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        app: multi-tenant
        version: v2
    spec:
      containers:
        - name: multi-tenant
          image: 192.168.2.200:5000/multi-tenant:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: multi-tenant-service
spec:
  type: NodePort
  selector:
    app: multi-tenant
  ports:
    - port: 7081
      protocol: TCP
      targetPort: 7081
      nodePort: 30081
