deploy/mysql-endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-endpoint
subsets:
  - addresses:
      - ip: 172.27.25.6
    ports:
      - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-endpoint
spec:
  clusterIP: 10.1.218.157
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
