deploy/istio-virtualservice-gateways.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-tenant-virtualservice-gateways
spec:
  hosts:
    - multi-tenant-service.default.svc.cluster.local
    - k8s.walter.com
  gateways:
    - mesh
    - multi-tenant-gateway
  http:
    - match:
        - gateways:
            - multi-tenant-gateway
      route:
        - destination:
            host: multi-tenant-service.default.svc.cluster.local
            subset: v2
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: "5xx"
    - route:
        - destination:
            host: multi-tenant-service.default.svc.cluster.local
            subset: v1
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: "5xx"
