deploy/istio-virtualservice-weight.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-tenant-virtualservice-weight
spec:
  hosts:
    - multi-tenant-service.default.svc.cluster.local
  gateways:
    - mesh
    - multi-tenant-gateway
  http:
    - route:
        - destination:
            host: multi-tenant-service.default.svc.cluster.local
            subset: v1
          weight: 80
        - destination:
            host: multi-tenant-service.default.svc.cluster.local
            subset: v2
          weight: 20
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: "5xx"
