deploy/startup.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-endpoint
subsets:
  - addresses:
      - ip: 192.168.2.102
    ports:
      - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-endpoint
spec:
  clusterIP: 10.1.218.157
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multi-tenant-deployment-0.0.1
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        app: multi-tenant
        version: 0.0.1
    spec:
      containers:
        - name: multi-tenant
          image: 192.168.2.200:5000/multi-tenant:0.0.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multi-tenant-deployment-0.0.2
spec:
  revisionHistoryLimit: 10
  replicas: 1
  template:
    metadata:
      labels:
        app: multi-tenant
        version: 0.0.2
    spec:
      containers:
        - name: multi-tenant
          image: 192.168.2.200:5000/multi-tenant:0.0.2
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 7081
              path: /multi-tenant/ping
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: multi-tenant-service
spec:
  type: NodePort
  selector:
    app: multi-tenant
  ports:
    - port: 7081
      protocol: TCP
      targetPort: 7081
      nodePort: 30081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: multi-tenant-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: k8s.walter.com
      http:
        paths:
          - path: /multi-tenant
            backend:
              serviceName: multi-tenant-service
              servicePort: 7081

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: multi-tenant-destinationrule
spec:
  host: multi-tenant-service
  subsets:
    - name: v0.0.1
      labels:
        version: 0.0.1
    - name: v0.0.2
      labels:
        version: 0.0.2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-tenant-virtualservice
spec:
  hosts:
    - multi-tenant-service
  http:
    - route:
        - destination:
            host: multi-tenant-service
            subset: v0.0.2
