deploy/virtualservice-default.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-tenant-virtualservice-default
spec:
  hosts:
    - multi-tenant-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: multi-tenant-service.default.svc.cluster.local
            subset: v1
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
